<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/borobudur_edited"
    tools:context=".BookingPhoto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:measureWithLargestChild="false"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_alignTop="@+id/textView10"
            android:layout_alignStart="@+id/booking_time">


            <RadioButton
                android:id="@+id/radioStudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView10"
                android:layout_centerHorizontal="true"
                android:checked="true"
                android:text="Studio"
                android:textColor="#ffffff" />

            <RadioButton
                android:id="@+id/radioLain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="Tempat Lain"
                android:textColor="#ffffff" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/toolbar"
            android:layout_marginStart="39dp"
            android:layout_marginTop="49dp"
            android:text="Tanggal"
            android:textColor="#ffffff"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView8"
            android:layout_marginTop="31dp"
            android:text="Waktu"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:layout_alignStart="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView9"
            android:layout_below="@+id/textView9"
            android:layout_marginTop="38dp"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:text="Tempat" />

        <EditText
            android:id="@+id/booking_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView10"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/textView8"
            android:ems="10"
            android:focusable="true"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:hint="dd/mm/yyyy"
            android:inputType="date" />

        <EditText
            android:id="@+id/booking_alamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/radiogroup"
            android:layout_below="@+id/radiogroup"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:hint="Tuliskan alamat disini"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/booking_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="hh:mm"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:inputType="time"
            android:layout_alignTop="@+id/textView9"
            android:layout_alignStart="@+id/booking_date" />

        <Button
            android:id="@+id/booking_schedule"
            android:layout_width="281dp"
            android:layout_height="51dp"
            android:background="@drawable/roundbtn"
            android:backgroundTint="#ffffff"
            android:text="View schedule"
            android:textColor="#303f9f"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.805"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintHorizontal_bias="1.0"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1"
            android:layout_marginTop="55dp"
            android:layout_below="@+id/booking_alamat"
            android:layout_alignEnd="@+id/booking_alamat" />

        <Button
            android:id="@+id/booking_now"
            android:layout_width="282dp"
            android:layout_height="53dp"
            android:clickable="true"
            android:background="@drawable/roundbtn"
            android:backgroundTint="#303f9f"
            android:text="booking now"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1"
            tools:layout_editor_absoluteX="51dp"
            android:layout_below="@+id/booking_schedule"
            android:layout_alignEnd="@+id/booking_schedule"
            android:layout_marginTop="16dp" />
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/layout_header"
        app:menu="@menu/item_navigation" />
    </android.support.v4.widget.DrawerLayout>